--- a/Task1/mainwindow.ui
+++ b/Task1/mainwindow.ui
@@ -2,6 +2,14 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>430</width>
+    <height>282</height>
+   </rect>
+  </property>
   <property name="windowTitle">
    <string>Задачи myNumber</string>
   </property>
@@ -79,6 +87,7 @@
     </item>
    </layout>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <resources/>
  <connections/>
